@@ -1,6 +1,7 @@
 Date and Time               Change detail
+Feb 4, 2016 [3:50pm]        Fixed "seventh" link (bingo)
 Feb 4, 2016 [2:52pm]        Fixed "sixth" link 
-Feb 4, 2016 [2:43pm]		Fixed "fifth" link (show)
+Feb 4, 2016 [2:43pm]        Fixed "fifth" link (show)
 Feb 4, 2016 [2:30pm]        Fixed "fourth" link (lockemup)
 Feb 4, 2016 [2:11pm]        Fixed "third" link
 Feb 4, 2016 [2:00pm]        Fixed "second" link
